--- a/examples/Zetian.AntiSpam.Examples/Zetian.AntiSpam.Examples.csproj
+++ b/examples/Zetian.AntiSpam.Examples/Zetian.AntiSpam.Examples.csproj
@@ -1,21 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
-        <LangVersion>preview</LangVersion>
-        <AnalysisLevel>preview</AnalysisLevel>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <TargetFramework>net10.0</TargetFramework>
-        <RootNamespace>Zetian.AntiSpam.Examples</RootNamespace>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\src\Zetian\Zetian.csproj" />
         <ProjectReference Include="..\..\src\Zetian.AntiSpam\Zetian.AntiSpam.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0-rtm.25513.102" />
     </ItemGroup>
 
 </Project>
