--- a/src/Zetian.AntiSpam/Zetian.AntiSpam.csproj
+++ b/src/Zetian.AntiSpam/Zetian.AntiSpam.csproj
@@ -33,17 +33,16 @@
         <PackageId>Zetian.AntiSpam</PackageId>
         <Authors>Taiizor</Authors>
         <Product>Zetian SMTP Server - AntiSpam</Product>
-        <Copyright>Copyright $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>Advanced anti-spam extension for Zetian SMTP Server featuring SPF/DKIM/DMARC validation, RBL/DNSBL checks, Bayesian filtering, and more.</Summary>
-        <Description>Advanced anti-spam extension for Zetian SMTP Server. Includes SPF/DKIM/DMARC email authentication, RBL/DNSBL blacklist checking, Bayesian spam filtering, greylisting support, and customizable spam scoring system. Protect your SMTP server from spam, phishing, and email abuse.</Description>
+        <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
+        <Summary>Advanced anti-spam protection for Zetian SMTP Server. Includes SPF/DKIM/DMARC validation, Bayesian filtering, RBL/DNSBL checks, and greylisting.</Summary>
+        <Description>Comprehensive anti-spam solution for Zetian SMTP Server. Features include SPF/DKIM/DMARC email authentication, Bayesian spam filtering with machine learning, RBL/DNSBL reputation checks, greylisting, custom filters, and real-time threat detection. Easy integration with flexible configuration options.</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>smtp;spam;antispam;spf;dkim;dmarc;rbl;dnsbl;bayesian;email;filter;zetian</PackageTags>
+        <PackageTags>antispam;spam;filter;spf;dkim;dmarc;bayesian;rbl;dnsbl;greylisting;smtp;email;mail;server;zetian</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>git://github.com/Taiizor/Zetian</RepositoryUrl>
@@ -76,8 +75,9 @@
         </PackageReference>
     </ItemGroup>
 
+    <!-- DnsClient for SPF/DKIM/DMARC and RBL lookups -->
     <ItemGroup>
-        <PackageReference Include="DnsClient" Version="1.8.0" />
+        <PackageReference Include="DnsClient" Version="1.7.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -97,6 +97,11 @@
 
     <ItemGroup>
         <Folder Include="Properties\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Zetian.AntiSpam.Tests" />
+        <InternalsVisibleTo Include="Zetian.AntiSpam.Benchmarks" />
     </ItemGroup>
 
 </Project>
